<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.example.shanika.expensetracker.Home">


...
        android:paddingTop="5dp"
        android:weightSum="1"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageButton
            android:id="@+id/nav"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="top|left"
            android:background="@drawable/ic_menu_red_900_24dp"
            android:baselineAlignBottom="false"
...
