<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/calculator"
        android:icon="@drawable/ic_credit_card_green_500_24dp"
        android:title="Calculator"
        android:onClick="CalculatorButtonClicked"

        />
    <item
        android:id="@+id/history"
        android:icon="@drawable/ic_history_light_green_500_24dp"
        android:title="History"
        android:onClick="historyButtonClicked"/>
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_green_500_24dp"
        android:title="Search"
        android:onClick="searchButtonClicked"
        />
    <item
        android:id="@+id/categories"
        android:icon="@drawable/ic_assignment_green_500_24dp"
        android:title="Categories"
        android:onClick="categoriesButtonClicked"/>
    <item
        android:id="@+id/frequent"
        android:icon="@drawable/ic_access_time_green_500_24dp"
        android:title="Frequent Records"
        android:onClick="frequentButtonClicked"/>
    <item
        android:id="@+id/limit"
        android:icon="@drawable/ic_stop_screen_share_green_500_24dp"
        android:title="Set Limit"
        android:onClick="limitButtonClicked"/>
</menu>