...
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="5dp">

        <LinearLayout

            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/gg"
            android:backgroundTintMode="screen"
            android:padding="5dp"
...
            android:paddingTop="5dp"
            android:weightSum="1"
            tools:layout_editor_absoluteX="80dp"
            tools:layout_editor_absoluteY="0dp">

            <ImageButton
                android:id="@+id/back"
                style="@style/Widget.AppCompat.ImageButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="top|left"
                android:background="@drawable/ic_keyboard_arrow_left_red_900_24dp"
                android:baselineAlignBottom="false"
...
                android:inputType="textPersonName"
                android:maxWidth="500dp"
                android:minWidth="400dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonsL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/incomeAddBtn"
...
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="#2d9ae8"
                android:text="ADD" />

            <Button
                android:id="@+id/incomeCancelBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="@android:color/holo_red_light"
                android:text="CANCEL" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>

