<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/daily"
        android:title="Daily" />

    <item
        android:id="@+id/weekly"
        android:title="Weekly" />

    <item
        android:id="@+id/monthly"
        android:title="Monthly" />

    <item
        android:id="@+id/yearly"
        android:title="Yearly" />


</menu>